--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "matejsvajger/ntlm-soap-client",
+    "name": "nyno22/ntlm-soap-client",
     "type": "library",
     "description": "PHP WDSL/Soap Client with NTLM Authentication for Microsoft Dynamics NAT Server.",
     "keywords": [
-        "matejsvajger",
+        "nyno22",
         "ntlm-soap-client"
     ],
-    "homepage": "https://github.com/matejsvajger/ntlm-soap-client",
+    "homepage": "https://github.com/nyno22/ntlm-soap-client",
     "license": "MIT",
     "authors": [
         {
