--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0|~8.2",
-        "symfony/console": "^6.3"
+        "php": "~5.6|~7.0|^8.1",
+        "symfony/console": "^6.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0||~5.0",
