--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0"
-        "symfony/console": "6.2.13"
+        "php": "~5.6|~7.0|^8.1"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0||~5.0",
